--- a/frontend/static/css/tactical_calculator.css
+++ b/frontend/static/css/tactical_calculator.css
@@ -34,9 +34,21 @@
 }
 
 .unit-count {
-    width: 30px;
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
     text-align: center;
-    margin: 0 0px;
+    margin: 0 10px;
+    border: 1px solid #333;
+    border-radius: 4px;
+    display: inline-block;
+}
+
+.arrow-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 8px;
 }
 
 .arrow {
@@ -44,8 +56,13 @@
     border: 1px solid #ccc;
     border-radius: 3px;
     cursor: pointer;
-    padding: 2px 6px;
-    font-size: 12px;
+    padding: 1px 5px;
+    font-size: 10px;
+    line-height: 1;
+}
+
+.arrow.up {
+    margin-bottom: 2px;
 }
 
 .arrow:hover {
@@ -59,7 +76,6 @@
     border-radius: 5px;
 }
 
-/* Tooltip text */
 .unit-icon .tooltiptext {
   visibility: hidden;
   width: 120px;
@@ -90,4 +106,10 @@
 /* Tint Enemy icons red */
 .enemy .unit-icon .ship-icon {
     filter: invert(22%) sepia(98%) saturate(6867%) hue-rotate(357deg) brightness(97%) contrast(118%);
+}
+
+.unit-row {
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
 }
