--- a/frontend/templates/tactical.html
+++ b/frontend/templates/tactical.html
@@ -11,51 +11,65 @@
             <div class="unit-row" data-unit="fighter">
                 <span class="unit-icon"><img src="/static/images/ships/fighter_icon.png" class="ship-icon"
                                              alt="Fighter"><span class="tooltiptext">Fighter</span></span>
-                <button class="arrow up" data-unit="friendly-fighter">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-fighter">▲</button>
+                    <button class="arrow down" data-unit="friendly-fighter">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-fighter-count">0</span>
-                <button class="arrow down" data-unit="friendly-fighter">▼</button>
             </div>
             <div class="unit-row" data-unit="destroyer">
                 <span class="unit-icon"><img src="/static/images/ships/destroyer_icon.png" class="ship-icon"
                                              alt="Destroyer"><span class="tooltiptext">Destroyer</span></span>
-                <button class="arrow up" data-unit="friendly-destroyer">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-destroyer">▲</button>
+                    <button class="arrow down" data-unit="friendly-destroyer">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-destroyer-count">0</span>
-                <button class="arrow down" data-unit="friendly-destroyer">▼</button>
             </div>
             <div class="unit-row" data-unit="cruiser">
                 <span class="unit-icon"><img src="/static/images/ships/cruiser_icon.png" class="ship-icon"
                                              alt="Cruiser"><span class="tooltiptext">Cruiser</span></span>
-                <button class="arrow up" data-unit="friendly-cruiser">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-cruiser">▲</button>
+                    <button class="arrow down" data-unit="friendly-cruiser">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-cruiser-count">0</span>
-                <button class="arrow down" data-unit="friendly-cruiser">▼</button>
             </div>
             <div class="unit-row" data-unit="carrier">
                 <span class="unit-icon"><img src="/static/images/ships/carrier_icon.png" class="ship-icon"
                                              alt="Carrier"><span class="tooltiptext">Carrier</span></span>
-                <button class="arrow up" data-unit="friendly-carrier">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-carrier">▲</button>
+                    <button class="arrow down" data-unit="friendly-carrier">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-carrier-count">0</span>
-                <button class="arrow down" data-unit="friendly-carrier">▼</button>
             </div>
             <div class="unit-row" data-unit="dreadnought">
                 <span class="unit-icon"><img src="/static/images/ships/dread_icon.png" class="ship-icon"
                                              alt="Dreadnought"><span class="tooltiptext">Dreadnought</span></span>
-                <button class="arrow up" data-unit="friendly-dreadnought">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-dreadnought">▲</button>
+                    <button class="arrow down" data-unit="friendly-dreadnought">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-dreadnought-count">0</span>
-                <button class="arrow down" data-unit="friendly-dreadnought">▼</button>
             </div>
             <div class="unit-row" data-unit="war_sun">
                 <span class="unit-icon"><img src="/static/images/ships/war_sun_icon.png" class="ship-icon"
                                              alt="War Sun"><span class="tooltiptext">War Sun</span></span>
-                <button class="arrow up" data-unit="friendly-war_sun">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-war_sun">▲</button>
+                    <button class="arrow down" data-unit="friendly-war_sun">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-war_sun-count">0</span>
-                <button class="arrow down" data-unit="friendly-war_sun">▼</button>
             </div>
             <div class="unit-row" data-unit="flagship">
                 <span class="unit-icon"><img src="/static/images/ships/flagship_icon.png" class="ship-icon"
                                              alt="Flagship"><span class="tooltiptext">Flagship</span></span>
-                <button class="arrow up" data-unit="friendly-flagship">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-flagship">▲</button>
+                    <button class="arrow down" data-unit="friendly-flagship">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-flagship-count">0</span>
-                <button class="arrow down" data-unit="friendly-flagship">▼</button>
             </div>
         </div>
 
@@ -65,51 +79,65 @@
             <div class="unit-row" data-unit="fighter">
                 <span class="unit-icon"><img src="/static/images/ships/fighter_icon.png" class="ship-icon"
                                              alt="Fighter"><span class="tooltiptext">Fighter</span></span>
-                <button class="arrow up" data-unit="enemy-fighter">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-fighter">▲</button>
+                    <button class="arrow down" data-unit="enemy-fighter">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-fighter-count">0</span>
-                <button class="arrow down" data-unit="enemy-fighter">▼</button>
             </div>
             <div class="unit-row" data-unit="destroyer">
                 <span class="unit-icon"><img src="/static/images/ships/destroyer_icon.png" class="ship-icon"
                                              alt="Destroyer"><span class="tooltiptext">Destroyer</span></span>
-                <button class="arrow up" data-unit="enemy-destroyer">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-destroyer">▲</button>
+                    <button class="arrow down" data-unit="enemy-destroyer">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-destroyer-count">0</span>
-                <button class="arrow down" data-unit="enemy-destroyer">▼</button>
             </div>
             <div class="unit-row" data-unit="cruiser">
                 <span class="unit-icon"><img src="/static/images/ships/cruiser_icon.png" class="ship-icon"
                                              alt="Cruiser"><span class="tooltiptext">Cruiser</span></span>
-                <button class="arrow up" data-unit="enemy-cruiser">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-cruiser">▲</button>
+                    <button class="arrow down" data-unit="enemy-cruiser">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-cruiser-count">0</span>
-                <button class="arrow down" data-unit="enemy-cruiser">▼</button>
             </div>
             <div class="unit-row" data-unit="carrier">
                 <span class="unit-icon"><img src="/static/images/ships/carrier_icon.png" class="ship-icon"
                                              alt="Carrier"><span class="tooltiptext">Carrier</span></span>
-                <button class="arrow up" data-unit="enemy-carrier">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-carrier">▲</button>
+                    <button class="arrow down" data-unit="enemy-carrier">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-carrier-count">0</span>
-                <button class="arrow down" data-unit="enemy-carrier">▼</button>
             </div>
             <div class="unit-row" data-unit="dreadnought">
                 <span class="unit-icon"><img src="/static/images/ships/dread_icon.png" class="ship-icon"
                                              alt="Dreadnought"><span class="tooltiptext">Dreadnought</span></span>
-                <button class="arrow up" data-unit="enemy-dreadnought">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-dreadnought">▲</button>
+                    <button class="arrow down" data-unit="enemy-dreadnought">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-dreadnought-count">0</span>
-                <button class="arrow down" data-unit="enemy-dreadnought">▼</button>
             </div>
             <div class="unit-row" data-unit="war_sun">
                 <span class="unit-icon"><img src="/static/images/ships/war_sun_icon.png" class="ship-icon"
                                              alt="War Sun"><span class="tooltiptext">War Sun</span></span>
-                <button class="arrow up" data-unit="enemy-war_sun">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-war_sun">▲</button>
+                    <button class="arrow down" data-unit="enemy-war_sun">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-war_sun-count">0</span>
-                <button class="arrow down" data-unit="enemy-war_sun">▼</button>
             </div>
             <div class="unit-row" data-unit="flagship">
                 <span class="unit-icon"><img src="/static/images/ships/flagship_icon.png" class="ship-icon"
                                              alt="Flagship"><span class="tooltiptext">Flagship</span></span>
-                <button class="arrow up" data-unit="enemy-flagship">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-flagship">▲</button>
+                    <button class="arrow down" data-unit="enemy-flagship">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-flagship-count">0</span>
-                <button class="arrow down" data-unit="enemy-flagship">▼</button>
             </div>
         </div>
     </div>
@@ -123,16 +151,20 @@
             <div class="unit-row" data-unit="infantry">
                 <span class="unit-icon"><img src="/static/images/ground/infantry_icon.png" class="ship-icon"
                                              alt="Infantry"><span class="tooltiptext">Infantry</span></span>
-                <button class="arrow up" data-unit="friendly-infantry">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-infantry">▲</button>
+                    <button class="arrow down" data-unit="friendly-infantry">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-infantry-count">0</span>
-                <button class="arrow down" data-unit="friendly-infantry">▼</button>
             </div>
             <div class="unit-row" data-unit="mech">
                 <span class="unit-icon"><img src="/static/images/ground/mech_icon.png" class="ship-icon"
                                              alt="Mech"><span class="tooltiptext">Mech</span></span>
-                <button class="arrow up" data-unit="friendly-mech">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="friendly-mech">▲</button>
+                    <button class="arrow down" data-unit="friendly-mech">▼</button>
+                </div>
                 <span class="unit-count" id="friendly-mech-count">0</span>
-                <button class="arrow down" data-unit="friendly-mech">▼</button>
             </div>
         </div>
 
@@ -142,30 +174,38 @@
             <div class="unit-row" data-unit="infantry">
                 <span class="unit-icon"><img src="/static/images/ground/infantry_icon.png" class="ship-icon"
                                              alt="Infantry"><span class="tooltiptext">Infantry</span></span>
-                <button class="arrow up" data-unit="enemy-infantry">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-infantry">▲</button>
+                    <button class="arrow down" data-unit="enemy-infantry">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-infantry-count">0</span>
-                <button class="arrow down" data-unit="enemy-infantry">▼</button>
             </div>
             <div class="unit-row" data-unit="mech">
                 <span class="unit-icon"><img src="/static/images/ground/mech_icon.png" class="ship-icon"
                                              alt="Mech"><span class="tooltiptext">Mech</span></span>
-                <button class="arrow up" data-unit="enemy-mech">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-mech">▲</button>
+                    <button class="arrow down" data-unit="enemy-mech">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-mech-count">0</span>
-                <button class="arrow down" data-unit="enemy-mech">▼</button>
             </div>
             <div class="unit-row" data-unit="pds">
                 <span class="unit-icon"><img src="/static/images/structures/pds_icon.png" class="ship-icon"
                                              alt="PDS"><span class="tooltiptext">PDS</span></span>
-                <button class="arrow up" data-unit="enemy-pds">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-pds">▲</button>
+                    <button class="arrow down" data-unit="enemy-pds">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-pds-count">0</span>
-                <button class="arrow down" data-unit="enemy-pds">▼</button>
             </div>
             <div class="unit-row" data-unit="space_dock">
                 <span class="unit-icon"><img src="/static/images/structures/space_dock_icon.png" class="ship-icon"
                                              alt="Space Dock"><span class="tooltiptext">Space Dock</span></span>
-                <button class="arrow up" data-unit="enemy-space_dock">▲</button>
+                <div class="arrow-container">
+                    <button class="arrow up" data-unit="enemy-space_dock">▲</button>
+                    <button class="arrow down" data-unit="enemy-space_dock">▼</button>
+                </div>
                 <span class="unit-count" id="enemy-space_dock-count">0</span>
-                <button class="arrow down" data-unit="enemy-space_dock">▼</button>
             </div>
         </div>
     </div>
